# ClaudeCode-AgentKit

./: .gitignore  README.md
.claude/: settings.json
.github/workflows/: terraform.yml
agents/: README.md
agents/pr-fixer/: README.md  config.example.yaml  pyproject.toml
agents/pr-fixer/deploy/: crontab.example  install.sh  run.sh
agents/pr-fixer/prompts/: system.md  task.md.tmpl
agents/pr-fixer/src/pr_fixer/: __init__.py  __main__.py  agent.py  config.py  github.py  runner.py  state.py  workspace.py
agents/pr-fixer/tests/: test_config.py  test_github.py  test_state.py
scripts/: agentkit.sh  bootstrap-state.sh  box.sh  grant-permissions.sh
terraform/ec2-dev/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
