[project]
name = "pr-fixer"
version = "0.1.0"
description = "AgentKit agent that auto-fixes PRs with failing GitHub Actions, using the Claude Agent SDK."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.93",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pr-fixer = "pr_fixer.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
